WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99617
[Mac] Uninitialized Members in WebDataSourcePrivate
https://bugs.webkit.org/show_bug.cgi?id=99617
Summary
[Mac] Uninitialized Members in WebDataSourcePrivate
Joseph Pecoraro
Reported
2012-10-17 10:56:44 PDT
From its conversion from ObjC to C++. Patch to follow.
Attachments
[PATCH] Proposed Fix
(1.18 KB, patch)
2012-10-17 10:58 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2012-10-17 10:58:31 PDT
Created
attachment 169216
[details]
[PATCH] Proposed Fix
David Kilzer (:ddkilzer)
Comment 2
2012-10-17 11:37:56 PDT
Comment on
attachment 169216
[details]
[PATCH] Proposed Fix r=me
WebKit Review Bot
Comment 3
2012-10-17 12:02:34 PDT
Comment on
attachment 169216
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 169216 Committed
r131628
: <
http://trac.webkit.org/changeset/131628
>
WebKit Review Bot
Comment 4
2012-10-17 12:02:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug