[Mac] Uninitialized Members in WebDataSourcePrivate https://bugs.webkit.org/show_bug.cgi?id=99617

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2012-10-17
Reviewed by David Kilzer.

Initialize BOOL member variables.

* WebView/WebDataSource.mm:
(WebDataSourcePrivate::WebDataSourcePrivate):

Canonical link: https://commits.webkit.org/117584@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131628 268f45cc-cd09-0410-ab3c-d52691b4dbfc